# example_game

./: CMakeLists.txt
packaging/rg35xx/: build-garlicos.sh
packaging/rg35xx/package/ROMS/PORTS/: GAME_NAME.sh
src/: init.h  logger.h  main.cpp  main.h
src/engine/: audio.cpp  audio.h  file.cpp  file.h  image.cpp  image.h  input.cpp  input.h  time.cpp  time.h
src/sdl1/: audio.cpp  audio.h  image.cpp  image.h  init.cpp  init.h  input.cpp  input.h
